  - Recursive tuple types are not allowed anymore. Use ``object`` instead.
  - The PEGS module returns ``nil`` instead of ``""`` when an optional capture
    fails to match.
  - The re module returns ``nil`` instead of ``""`` when an optional capture
    fails to match.
  - The "symmetric set difference" operator (``-+-``) never worked and has been
    removed.
  - ``defer`` is a keyword now.
  - The ``using`` language feature now needs to be activated via the new
    ``{.experimental.}`` pragma that enables experimental language features.

  Language Additions
  ------------------

  - The new concurrency model has been implemented including ``locks`` sections,
    lock levels and object field ``guards``.
  - The ``parallel`` statement has been implemented.
  - ``deepCopy`` has been added to the language.
  - The builtin ``procCall`` can be used to get ``super``-like functionality
    for multi methods.
  - There is a new pragma ``{.experimental.}`` that enables experimental
    language features per module, or you can enable this features on a global
    level with the ``--experimental`` command line option.


  Compiler Additions
  ------------------

  - The compiler now supports *mixed* Objective C / C++ / C code generation:
    The modules that use ``importCpp`` or ``importObjc`` are compiled to C++
    or Objective C code, any other module is compiled to C code. This
    improves interoperability.
  - There is a new ``parallel`` statement for safe fork&join parallel computing.
  - ``guard`` and ``lock`` pragmas have been implemented to support safer
    concurrent programming.
  - The following procs are now available at compile-time::

      math.sqrt, math.ln, math.log10, math.log2, math.exp, math.round,
      math.arccos, math.arcsin, math.arctan, math.arctan2, math.cos, math.cosh,
      math.hypot, math.sinh, math.sin, math.tan, math.tanh, math.pow,
      math.trunc, math.floor, math.ceil, math.fmod,