@@ -3,7 +3,7 @@ bind block break
 case cast const continue converter
 defer discard distinct div do
 elif else end enum except export
-finally for from
+finally for from func
 generic
 if import in include interface is isnot iterator
 let
